[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "markdown_help"
version = "0.0.2"
authors = [
  { name="Michal Moroz", email="michal@makimo.pl" },
]
description = "Generate automatic command index from a program."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/makimo/markdown-help"
"Bug Tracker" = "https://github.com/makimo/markdown-help/issues"