[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "markdown_help"
version = "0.9"
authors = [
  { name="Michal Moroz", email="michal@makimo.pl" },
  { name="Wojciech Mielczarek", email="wojciech.mielczarek@makimo.pl" },
]
description = "Generate automatic command index from a program."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'docopt == 0.6.2',
]

[project.urls]
"Homepage" = "https://github.com/makimo/markdown-help"
"Bug Tracker" = "https://github.com/makimo/markdown-help/issues"

[project.scripts]
markdown-help = "markdown_help:main"